ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: frontend
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 3000
        path: /()(.*)
        pathType: Prefix
      - backend:
          service:
            name: simple-tracker-api
            port:
              number: 8081
        path: /api(/|$)(.*)
        pathType: Prefix
